fixes click overlay z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,7 @@ a:active {
 	height: 100%;
 	top: 0;
 	left: 0;
+	z-index: 1000;
 }
 
 .controls {
